--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ cache:
 jdk:
   - openjdk11
 services:
-  - mongodb
+  - docker
 script:
-  - travis_wait 50 ./gradlew cards:test --no-parallel
+  - travis_wait 50 ./gradlew test --no-parallel
 env:
   global:
     JAVA_OPTS=-Xmx1024m
