--- a/quasar-core/build.gradle
+++ b/quasar-core/build.gradle
@@ -94,7 +94,8 @@ dependencies {
         exclude group: 'org.slf4j', module: '*'
     }
 
-    implementation "io.dropwizard.metrics:metrics-jmx:4.1.9"
+    implementation 'io.dropwizard.metrics:metrics-jmx:4.1.9'
+    implementation 'io.micrometer:micrometer-core:1.5.1'
 
     provided "org.apache.ant:ant:1.10.5"
     implementation 'com.google.errorprone:error_prone_annotations:2.1.3'
@@ -267,10 +268,7 @@ shadowJar {
     classifier = '' // overwrite jar
     destinationDir = file("$buildDir/libs")
     from sourceSets.main.output
-    configurations = [project.configurations.runtime]
-    dependencies {
-        include(dependency('org.ow2.asm:.*:.*'))
-    }
+    configurations = [project.configurations.runtimeClasspath]
     exclude 'META-INF/INDEX.LIST'
     relocate 'org.objectweb.asm.', 'co.paralleluniverse.asm.'
 
