--- a/www/package.json
+++ b/www/package.json
@@ -11,29 +11,39 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
+    "acorn": "^6.4.1",
+    "acorn-dynamic-import": "^4.0.0",
     "blockly": "^3.20200402.1",
     "canvas": "^2.6.1",
     "enumify": "^2.0.0",
     "gatsby": "^2.19.23",
     "gatsby-image": "^2.2.41",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-s3": "^0.3.3",
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-remark-autolink-headers": "^2.3.7",
     "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-remark-image-attributes": "^0.2.1",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.16",
+    "jimp": "^0.13.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-ace": "^8.1.0",
     "react-blockly": "^5.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
     "react-loadable": "^5.5.0",
+    "react-reconciler": "^0.25.1",
+    "react-spring": "^8.0.27",
     "recursive-omit-by": "^2.0.0",
-    "string-format": "^2.0.0"
+    "remark-image-attributes": "^0.1.3",
+    "string-format": "^2.0.0",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "babel-jest": "^26.0.0",
