Server improvements, client improvements, AI training

--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation project(':core')
     testImplementation project(':quasar-core')
     testImplementation 'com.google.guava:guava:26.0-jre'
-    testImplementation 'io.github.classgraph:classgraph:4.8.59'
+    testImplementation "io.github.classgraph:classgraph:$classgraphVersion"
     testImplementation 'org.jetbrains:annotations:16.0.2'
     testImplementation project(':testutils')
     testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
