--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include 'quasar-core'
 include 'game'
 include 'cards'
 include 'net'
-include 'cluster'
+include 'ai'
 include 'client'
 include 'vertx-sync'
 include 'testutils'
