--- a/ai/build.gradle
+++ b/ai/build.gradle
@@ -23,14 +23,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.5'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    implementation group: 'io.jenetics', name: 'jenetics', version: '4.1.0'
-    implementation group: 'io.jenetics', name: 'jenetics.ext', version: '4.1.0'
-    testImplementation group: 'org.testng', name: 'testng', version: '7.+'
-}
-
-test {
-    useTestNG()
-    testLogging {
-        events "standardError"
-    }
+    implementation group: 'io.jenetics', name: 'jenetics', version: '6.0.1'
+    implementation group: 'io.jenetics', name: 'jenetics.ext', version: '6.0.1'
+    runtimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
 }
