--- a/.dockerignore
+++ b/.dockerignore
@@ -25,6 +25,7 @@ setup.cfg
 !micro/*
 !internalcontent/*
 !discordbot/*
+!vertx-redis-cluster/*
 # Omit intermediate build data
 **/build/
 **/classes/
