--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'internalcontent'
 include 'discordbot'
 include 'vertx-redis-cluster'
 include 'testcontainers'
-include 'conversiontest'
+include 'www'
+include 'python'
