--- a/www/package.json
+++ b/www/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.20.24",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-flow": "^1.3.11",
     "gatsby-plugin-s3": "^0.3.3",
     "gatsby-plugin-sass": "^2.1.29",
     "gatsby-plugin-sharp": "^2.4.5",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "babel-jest": "^26.0.0",
     "babel-preset-gatsby": "^0.4.0",
+    "flow-bin": "^0.130.0",
     "gatsby-cli": "^2.12.42",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.0",
