Java interop conversion harness works

--- a/www/package.json
+++ b/www/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.16",
+    "java": "^0.12.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
