--- a/www/build.gradle
+++ b/www/build.gradle
@@ -1,10 +1,13 @@
 plugins {
     id "com.github.node-gradle.node" version "2.2.4"
+    id 'com.github.johnrengelman.shadow' version "5.2.0"
     id 'java-library'
 }
 
 apply plugin: "com.github.node-gradle.node"
 apply plugin: 'java-library'
+
+version = '0.8.79'
 
 dependencies {
     api project(':core')
@@ -16,6 +19,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+shadowJar {
+    mergeServiceFiles()
+    zip64 true
 }
 
 node {
