--- a/game/build.gradle
+++ b/game/build.gradle
@@ -12,12 +12,11 @@ dependencies {
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation project(':vertx-sync')
 
-    api 'org.slf4j:slf4j-api:1.7.20'
+    implementation 'org.slf4j:slf4j-api:1.7.22'
     api 'org.jetbrains:annotations:16.0.2'
-    api 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'io.jaegertracing:jaeger-client:1.2.0'
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'org.apache.commons:commons-math3:3.7'
-    implementation 'commons-io:commons-io:2.5'
+    implementation 'commons-io:commons-io:2.4'
 }
