--- a/ai/build.gradle
+++ b/ai/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     implementation project(':game')
     implementation project(':cards')
-
+    implementation 'org.slf4j:slf4j-api:1.7.22'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.4'
