Bard and occultist json fixes

--- a/cards/src/main/resources/cards/collectible/neutral/verdant_dreams/occultist/what_lies_beneath/minion_knowledge_hoarder.json
+++ b/cards/src/main/resources/cards/collectible/neutral/verdant_dreams/occultist/what_lies_beneath/minion_knowledge_hoarder.json
@@ -37,12 +37,12 @@
         "class": "GameStateChangedTrigger",
         "targetPlayer": "SELF"
       }
-    ]
-  },
+    }
+  ],
   "collectible": true,
   "sets": [
     "CUSTOM",
     "WHAT_LIES_BENEATH"
   ],
-  "fileFormatVersion": 1,
- }
+  "fileFormatVersion": 1
+}
