--- a/micro/build.gradle
+++ b/micro/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation 'org.slf4j:slf4j-api:1.7.22'
     implementation 'org.jetbrains:annotations:16.0.2'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'io.jaegertracing:jaeger-client:1.2.0'
     implementation 'org.apache.commons:commons-lang3:3.7'
