--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation "io.github.classgraph:classgraph:$classgraphVersion"
     testImplementation 'org.jetbrains:annotations:16.0.2'
     testImplementation project(':testutils')
+    testRuntimeOnly "ch.qos.logback:logback-classic:1.2.3"
     testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
 }
 
