Improve editor algorithm accuracy

--- a/cards/src/main/resources/cards/collectible/toast/custom/spell_titan_feast.json
+++ b/cards/src/main/resources/cards/collectible/toast/custom/spell_titan_feast.json
@@ -9,8 +9,18 @@
   "spell": {
     "class": "PlayCardsRandomlySpell",
     "cardFilter": {
-      "class": "CardFilter",
-      "cardType": "SPELL"
+      "class": "AndFilter",
+      "filters": [
+        {
+          "class": "CardFilter",
+          "cardType": "SPELL"
+        },
+        {
+          "class": "SpecificCardFilter",
+          "card": "spell_titan_feast",
+          "invert": true
+        }
+      ]
     },
     "cardSource": {
       "class": "DeckSource",
