--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ include 'vertx-redis-cluster'
 include 'testcontainers'
 include 'www'
 include 'python'
+include 'framework'
+include 'unityclient'
