--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 	path = secrets
 	url = git@github.com:hiddenswitch/HiddenSwitch-Secrets.git
 [submodule "unityclient"]
-	path = unityclient
+	path = unityclient/src/unity
 	url = git@github.com:hiddenswitch/Spellsource-Client.git
 [submodule "steamguardcli"]
 	path = steamguardcli
