--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,10 +7,10 @@ apply plugin: 'java-library'
 group 'com.hiddenswitch'
 
 dependencies {
-    implementation 'io.vertx:vertx-core:3.9.2'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
+    api 'io.vertx:vertx-core:3.9.2'
+    api 'org.slf4j:slf4j-api:1.7.22'
+    api 'com.google.guava:guava:26.0-jre'
+    api 'org.jetbrains:annotations:16.0.2'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.10.2'
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
-    implementation 'org.slf4j:slf4j-api:1.7.22'
-    implementation 'com.google.guava:guava:26.0-jre'
-    implementation 'org.jetbrains:annotations:16.0.2'
 }
