Include maven for building

--- a/ai/build.gradle
+++ b/ai/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
+apply plugin: 'maven'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java-library'
 apply from: '../gradle/instrument.gradle'
