--- a/quasar-core/build.gradle
+++ b/quasar-core/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 apply plugin: 'java-library'
+apply plugin: 'maven'
 apply plugin: "com.github.johnrengelman.shadow"
 
 group 'com.hiddenswitch'
