--- a/vertx-sync/build.gradle
+++ b/vertx-sync/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 apply plugin: 'java-library'
 apply from: '../gradle/instrument.gradle'
+apply plugin: 'maven'
 
 dependencies {
     api 'io.vertx:vertx-core:3.9.2'
