--- a/.dockerignore
+++ b/.dockerignore
@@ -27,6 +27,7 @@ setup.cfg
 !discordbot/*
 !vertx-redis-cluster/*
 !conversiontest/*
+!framework/*
 # Omit intermediate build data
 **/build/
 **/classes/
